@@ -40,7 +40,9 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+
 				</configuration>
+                
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -50,6 +52,7 @@
                     <includes>
                         <include>**/de/sub/goobi/TestAll.java</include>
                     </includes>
+                    <argLine>--add-exports java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
                 </configuration>
 
 			</plugin>
